# strands-agents

./: .gitignore  .pre-commit-config.yaml  Makefile  README.macos.md  README.md  README.windows.md  pyproject.toml  requirements.txt
examples/python/: agent.py  agent_quickstart.py  automation_agents.py  business_rules_agent.py  cs_glossary.json  dummy_agents.py  glossary_memory_agent.py  orchestrator_agent.py  simple_tools_agent.py
src/strands_agents/: __init__.py  __main__.py  hello.py
