[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "strands-agents-local"
version = "0.1.0"
description = "Local workspace for Strands Agents examples"
readme = "README.md"
requires-python = ">=3.10"
authors = [{ name = "Ashutosh Gupta" }]
dependencies = [
  "strands-agents==1.3.0",
  "strands-agents-tools==0.2.3",
  "mcp==1.12.4",
]

[tool.uv]
# If you use uv later, this keeps venv in .venv
managed = true
python-preference = "only-system"

